--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body {
-    max-width: 90%;
-    margin: auto;
+    margin: 0 60 0 60;
     background: #1e2227;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
@@ -24,6 +23,7 @@ body {
     align-items: center;
     vertical-align: middle;
     width: 100%;
+    max-width: 1024px;
 }
 
 .center {
@@ -36,7 +36,16 @@ body {
 .ad {
     grid-area: ad;
     padding: 0 0 0 60;
+    margin:0 ;
     width: 300px;
+}
+
+.count {
+    grid-area: count;
+    padding: 0 0 0 60;
+    width: 300px;
+    vertical-align: middle;
+    font-size: 24px;
 }
 
 .credit {
@@ -87,12 +96,15 @@ body {
 .grid-container {
     display: grid;
     grid-template-columns: (auto 360px);
-    grid-template-rows: minmax(100px, auto);
+    /* grid-template-rows: minmax(100px, auto); */
     grid-template-areas: 
         "header header" 
         "photo ad"
+        "photo count"
         "photo credit"
-        "thumbs credit" 
+        "thumbs ." 
         "footer footer"
         "todo todo";
+    max-width: 1384px;
+    margin: auto;
 }
